// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ModalConfirmationDomainDelete /> <TestModalConfirmationDomainDelete /> should render correctly 1`] = `
Array [
  <button
    aria-controls="id-1"
    aria-describedby="id-2"
    aria-expanded={false}
    aria-haspopup="dialog"
    className="sc-breQAM Button__ButtonInner-dXfNcJ DceMC iWxcUO ButtonQuickAction___StyledButton-fmafsA etoUvh"
    onBlur={[Function]}
    onClick={[Function]}
    onClickCapture={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyPressCapture={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseDownCapture={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    tabIndex={0}
    type="button"
  >
    <IconMock
      className="sc-breQAM Icon__IconInner-dszKAZ Icon___StyledIconInner-cDUvPZ gpvnZ exKJSE AjyOr icon"
    />
  </button>,
  <div
    className="cap-tooltip"
    hidden={true}
    id="id-2"
    onAnimationEnd={[Function]}
    onTransitionEnd={[Function]}
    role="tooltip"
    style={
      Object {
        "display": "none",
        "left": "100%",
        "pointerEvents": "none",
        "position": "fixed",
        "top": "100%",
        "zIndex": 1100,
      }
    }
  />,
  <div
    aria-label="delete-confirmation"
    aria-modal={true}
    data-dialog={true}
    hidden={true}
    id="id-1"
    onAnimationEnd={[Function]}
    onBlur={[Function]}
    onKeyDown={[Function]}
    onTransitionEnd={[Function]}
    role="dialog"
    style={
      Object {
        "display": "none",
      }
    }
    tabIndex={-1}
  />,
]
`;

exports[`<ModalConfirmationDomainDelete /> <TestModalConfirmationDomainDelete /> should render modal open 1`] = `
Array [
  <button
    aria-controls="id-1"
    aria-describedby="id-2"
    aria-expanded={true}
    aria-haspopup="dialog"
    className="sc-breQAM Button__ButtonInner-dXfNcJ DceMC iWxcUO ButtonQuickAction___StyledButton-fmafsA etoUvh"
    onBlur={[Function]}
    onClick={[Function]}
    onClickCapture={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyPressCapture={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseDownCapture={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    tabIndex={0}
    type="button"
  >
    <IconMock
      className="sc-breQAM Icon__IconInner-dszKAZ Icon___StyledIconInner-cDUvPZ gpvnZ exKJSE AjyOr icon"
    />
  </button>,
  <div
    className="cap-tooltip"
    hidden={true}
    id="id-2"
    onAnimationEnd={[Function]}
    onTransitionEnd={[Function]}
    role="tooltip"
    style={
      Object {
        "display": "none",
        "left": "100%",
        "pointerEvents": "none",
        "position": "fixed",
        "top": "100%",
        "zIndex": 1100,
      }
    }
  />,
  <div
    aria-label="delete-confirmation"
    aria-modal={true}
    data-dialog={true}
    hidden={false}
    id="id-1"
    onAnimationEnd={[Function]}
    onBlur={[Function]}
    onKeyDown={[Function]}
    onTransitionEnd={[Function]}
    role="dialog"
    tabIndex={-1}
  >
    <div
      data-testid="AnimatePresence"
    >
      <div
        className="sc-breQAM iqRiiI Modal__ModalContainerInner-gRvBLO"
        onClick={[Function]}
        style={
          Object {
            "opacity": 0,
          }
        }
      >
        <div
          className="sc-breQAM hOIBrM Modal__ModalInner-fNGFsd"
          style={
            Object {
              "opacity": 0,
              "transform": "translateY(-20px) translateZ(0)",
            }
          }
        >
          <header
            className="sc-breQAM Flex___StyledAppBox-SiGEY bWQpCu"
          >
            <div
              className="sc-breQAM Flex___StyledAppBox-SiGEY fLXUyd ModalHeader___StyledFlex-hKIJSk eRNTmy"
            >
              <h2
                className="sc-breQAM eHUpPC"
              >
                delete-confirmation
              </h2>
            </div>
            <button
              className="sc-breQAM Button__ButtonInner-dXfNcJ drSKjX iWxcUO"
              onClick={[Function]}
              type="button"
            >
              <IconMock
                className="sc-breQAM Icon__IconInner-dszKAZ Icon___StyledIconInner-cDUvPZ hLpMUH exKJSE AjyOr icon"
              />
            </button>
          </header>
          <main
            className="sc-breQAM Flex___StyledAppBox-SiGEY amxUE"
          >
            <p
              className="sc-breQAM eeoOT"
            >
              are-you-sure-to-delete-something
            </p>
          </main>
          <footer
            className="sc-breQAM Flex___StyledAppBox-SiGEY cPblrQ gPKEuH"
          >
            <div
              className="sc-breQAM Flex___StyledAppBox-SiGEY bznQMG gEtlaU"
            >
              <button
                className="sc-breQAM Button__ButtonInner-dXfNcJ kJAqcD lilFYw"
                onClick={[Function]}
                type="button"
              >
                cancel
              </button>
              <button
                className="sc-breQAM Button__ButtonInner-dXfNcJ kJAqcD fjccAb"
                onClick={[Function]}
                type="button"
              >
                global.delete
              </button>
            </div>
          </footer>
        </div>
      </div>
    </div>
  </div>,
]
`;
